<resources>
    <string name="app_name">AlarmClock</string>
    <string name="text_style">monospace</string>
    <string name="current_city_string">Rostov</string>
    <string name="add_alarm">Add</string>

    <string name="day_of_the_week">Days of the week</string>

    <string name="alarm_music">Music</string>
    <string name="alarm_music_choose">Music choose ></string>

    <string name="alarm_vibration">Vibration</string>

    <string name="alarm_name">Description</string>
    <string name="alarm_description">Alarm clock ></string>

    <string name="alarm_duration">Duration</string>
    <string name="alarm_duration_standart">10 min ></string>
</resources>
